// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should match the snapshot when the text is error 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  z-index: 1001;
  margin: 0.5rem;
}

<div
    class="emotion-0"
  >
    <div
      aria-labelledby="fui-r0"
      class="fui-MessageBar r2oyxsj ___1be4jvi_v7t0590 f1eon7jj f1f8dvr7 f1g1ijmo fo25q1j f1nxacbt"
      role="group"
    >
      <div
        class="fui-MessageBar__icon r1df1z33 ___wql3ad0_53zucl0 f1ca9wz"
      >
        <svg
          aria-hidden="true"
          class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
          fill="currentColor"
          height="1em"
          viewBox="0 0 20 20"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 2a8 8 0 1 1 0 16 8 8 0 0 1 0-16ZM7.8 7.11a.5.5 0 0 0-.63.06l-.06.07a.5.5 0 0 0 .06.64L9.3 10l-2.12 2.12-.06.07a.5.5 0 0 0 .06.64l.07.06c.2.13.47.11.64-.06L10 10.7l2.12 2.12.07.06c.2.13.46.11.64-.06l.06-.07a.5.5 0 0 0-.06-.64L10.7 10l2.12-2.12.06-.07a.5.5 0 0 0-.06-.64l-.07-.06a.5.5 0 0 0-.64.06L10 9.3 7.88 7.17l-.07-.06Z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="fui-MessageBarBody rtatq2b"
      >
        error
      </div>
      <div
        class="fui-MessageBarActions r1t4x98y ___12vb27g_aqou110 fjseox"
      />
      <div
        class="fui-MessageBarActions__containerAction rgzw8nq"
      >
        <button
          class="fui-Link ___52mpgl0_k1g75g0 f2hkw1w f3rmtva f1ewtqcl fyind8e f1k6fduh f1w7gpdv fk6fouc fkhj508 figsok6 f1s184ao f1mk8lai fnbmjn9 f1o700av f1iuv45f f1cmlufx f9n3di6 f1ids18y f1tx3yz7 f1deo86v f1eh06m1 f1iescvh fhgqx19 f1olyrje f1p93eir f1nev41a f1ern45e f1n71otn f1h8hb77 f1deefiw"
          type="button"
        >
          Dismiss
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should match the snapshot when the text is success 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  z-index: 1001;
  margin: 0.5rem;
}

<div
    class="emotion-0"
  >
    <div
      aria-labelledby="fui-r2"
      class="fui-MessageBar r2oyxsj ___1e8ylb3_17hk5n0 f64thcm f1b4u7v f1nyd2b1 fk173vo f70v3om"
      role="group"
    >
      <div
        class="fui-MessageBar__icon r1df1z33 ___kbmbi50_8ki2l30 f36rra6"
      >
        <svg
          aria-hidden="true"
          class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
          fill="currentColor"
          height="1em"
          viewBox="0 0 20 20"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 2a8 8 0 1 1 0 16 8 8 0 0 1 0-16Zm3.36 5.65a.5.5 0 0 0-.64-.06l-.07.06L9 11.3 7.35 9.65l-.07-.06a.5.5 0 0 0-.7.7l.07.07 2 2 .07.06c.17.11.4.11.56 0l.07-.06 4-4 .07-.08a.5.5 0 0 0-.06-.63Z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="fui-MessageBarBody rtatq2b"
      >
        success
      </div>
      <div
        class="fui-MessageBarActions r1t4x98y ___12vb27g_aqou110 fjseox"
      />
      <div
        class="fui-MessageBarActions__containerAction rgzw8nq"
      >
        <button
          class="fui-Link ___52mpgl0_k1g75g0 f2hkw1w f3rmtva f1ewtqcl fyind8e f1k6fduh f1w7gpdv fk6fouc fkhj508 figsok6 f1s184ao f1mk8lai fnbmjn9 f1o700av f1iuv45f f1cmlufx f9n3di6 f1ids18y f1tx3yz7 f1deo86v f1eh06m1 f1iescvh fhgqx19 f1olyrje f1p93eir f1nev41a f1ern45e f1n71otn f1h8hb77 f1deefiw"
          type="button"
        >
          Dismiss
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should match the snapshot when the text is undefined 1`] = `<DocumentFragment />`;

exports[`should match the snapshot when the text is warning 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  z-index: 1001;
  margin: 0.5rem;
}

<div
    class="emotion-0"
  >
    <div
      aria-labelledby="fui-r1"
      class="fui-MessageBar r2oyxsj ___hd2t6r0_1l4k1ej f13ftzij frd1ypx f1gyjrma fqyqtrt f18qd5xz"
      role="group"
    >
      <div
        class="fui-MessageBar__icon r1df1z33 ___gwngeu0_j951p00 f14a4cve"
      >
        <svg
          aria-hidden="true"
          class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
          fill="currentColor"
          height="1em"
          viewBox="0 0 20 20"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.68 2.79a1.5 1.5 0 0 1 2.64 0l6.5 12A1.5 1.5 0 0 1 16.5 17h-13a1.5 1.5 0 0 1-1.32-2.21l6.5-12ZM10.5 7.5a.5.5 0 0 0-1 0v4a.5.5 0 0 0 1 0v-4Zm.25 6.25a.75.75 0 1 0-1.5 0 .75.75 0 0 0 1.5 0Z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="fui-MessageBarBody rtatq2b"
      >
        warning
      </div>
      <div
        class="fui-MessageBarActions r1t4x98y ___12vb27g_aqou110 fjseox"
      />
      <div
        class="fui-MessageBarActions__containerAction rgzw8nq"
      >
        <button
          class="fui-Link ___52mpgl0_k1g75g0 f2hkw1w f3rmtva f1ewtqcl fyind8e f1k6fduh f1w7gpdv fk6fouc fkhj508 figsok6 f1s184ao f1mk8lai fnbmjn9 f1o700av f1iuv45f f1cmlufx f9n3di6 f1ids18y f1tx3yz7 f1deo86v f1eh06m1 f1iescvh fhgqx19 f1olyrje f1p93eir f1nev41a f1ern45e f1n71otn f1h8hb77 f1deefiw"
          type="button"
        >
          Dismiss
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
